theory/html/hspf-gpu/src/style.css
body {
	font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
}
body > #title {
	display: block ;
	position: fixed ;
	left: 0px ;
	top: 0px ;
	width: 370px ;
	text-align: center ;
	font-family: 'Palatino', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
	background-color : rgba(255,255,255,1) ;
	padding: 0px ;
	z-index: 100 ;
	border-bottom: 1px solid black  ;
}
body > #title > h1 {
	margin-bottom: 0px ;
	padding-bottom: 0px ;
}
body > #title > h2 {
	margin-top: 0px ;
	font-size: 10pt ;
}

nav {
	position: absolute ;
	left: 10px ;
	top: 80px ;
	width: 350px ;
}
section {
	display: block ;
	position: absolute ;
	left: 370px ;
	right: 10px;
}
.maps_container, .hs_map {
	position: relative ;
	display: block ;
	top: 0px ;
	left: 0px ;
	padding: 0px ;
	margin-bottom: 5px ;
	margin-top: 5px ;
	margin-left: 5px ;
	margin-top: 5px ;
	/*border: 10px solid black ;*/
	/*border-radius: 20px ;*/
}
.maps_container {
	width: 100% ;
	display: flex;
	flex-wrap: wrap;
	align-items: flex-start;
}
.map_container {
	display: inline-block ;
	position: relative ;
	margin-right: 5px ;
	margin-bottom: 5px ;
	flex: 1 1 48%;
	max-width: 500px;
	aspect-ratio: 5 / 4;
	border: 2px solid rgba( 0, 0, 0, 0.2 ) ;
	border-radius: 5px ;
}
.map_container > canvas {
	/*border: 2px solid rgb( 125, 64, 64 ) ;*/
	display: block ;
	position: absolute ;
	left: 0px ;
	top: 0px ;
	width: 100%;
	height: 100%;
}
.map_container > svg.annotation_overlay {
	display: block ;
	position: absolute ;
	left: 0px ;
	top: 0px ;
	width: 100%;
	height: 100%;
	/*background-color: rgb( 256, 256, 256, 0.1 ) ;*/
}

tr {
	text-align: center ;
}
.control, .hud {
	background: rgb( 255, 255, 255, 0.5 ) ;
}
.controls h1, .control h2 {
	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
	padding: 0px ;
	border-bottom: 1px solid black ;
}
.controls h1 {
	display: block ;
	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
	border-bottom: 1px solid black ;
}
.control, .hud, .playback {
	display: block ;
	margin-top: 0px ;
}
.playback-control {
	margin-bottom: 20px ;
	margin-top: 20px ;
}
.control, .hud {
	/*border: 1px solid black ;*/
	/*border-radius: 20px ;*/
	padding-bottom: 10px ;
}
.playback button {
	font-size: 24pt ;
	border: 2px solid black ;
	border-radius: 10px ;
	width: 50px ;
}
#playpause:hover {
	transform: scale(1.1,1.1) ;
}
#playpause[state="paused"] {
	background-color: rgb(30, 196, 30) ;
}
#playpause[state="paused"]::after {
	content: "⏵︎" ;
}
#playpause[state="playing"] {
	background-color: rgb(190, 10, 10) ;
}
#playpause[state="playing"]::after {
	content: "⏸︎" ;
}
#snapshot::after {
	content: "📷" ;
}
#snapshot[state="inactive"]::after {
	opacity: 0.5 ;
}
#snapshot[state="inactive"] {
	background-color: lightgrey ;
}
#snapshot[state="active"]:hover  {
	transform: scale(1.1,1.1) ;
}
.control input {
	width: 80px ;
}
input {
	text-align: center ;
}
.rowheader {
	text-align: right ;
	font-family:'Courier New', Courier, monospace ;
	font-size: 14pt ;
}
input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
	opacity: 1;
}
svg.palette_legend {
	display: block ;
	position: absolute ;
	right: 5px ;
	top: 20px ;
	background-color: rgb( 256, 256, 256, 0.5 ) ;
}
svg.comparison_display {
	display: inline-block ;
	position: absolute ;
	bottom: 0px ;
	/*left: 20px ;*/
	background:  rgb( 256, 256, 256, 0.5 ) ;
} 

